# SingleRust

./: .gitignore  Cargo.toml  README.MD  README.md
old/io/: mod.rs
old/processing/: mod.rs  normalization.rs
old/processing/helpers/: mod.rs
old/statistics/utils/: mod.rs
old/utils/: mod.rs
src/: backend.rs  lib.rs  utils.rs
src/backed/statistics/: mod.rs
src/backend/: mod.rs
src/io/: mod.rs
src/memory/: mod.rs
src/memory/plot/: mod.rs
src/memory/processing/: mod.rs
src/memory/processing/dim_red/: mod.rs
src/memory/processing/scale/: mod.rs
src/memory/processing/transform/: mod.rs
src/memory/statistics/: mod.rs
src/memory/statistics/structs/: mod.rs
src/preprocessing/: mod.rs
src/processing/: filtering.rs  mod.rs  processing_utils.rs
src/processing/helpers/: mod.rs
src/shared/: mod.rs
src/shared/plot/: mod.rs  settings.rs
src/shared/processing/: mod.rs
src/shared/processing/pca/: mod.rs
src/shared/processing/pcav2/: mod.rs
src/shared/statistics/: mod.rs
src/shared/statistics/helper/: csc.rs  csr.rs  mod.rs
src/shared/statistics/number/: mod.rs
src/shared/statistics/sum/: mod.rs
src/statistics/: mod.rs
src/statistics/utils/: csc.rs
src/utils/: adata.rs  emoji.rs  io.rs  matrix_market.rs  mod.rs  processing.rs  statistics.rs
src/utils/processing/: parallel.rs
src/utils/statistics/: utils.rs
src/utils/statistics/utils/: csc.rs  csr.rs
tests/: test_basic_load.rs  test_basic_stats.rs
