[package]
name = "single_rust"
version = "0.1.0-alpha.3"
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"
description = "Single-cell analysis in Rust"
categories = ["science"]
repository = "https://github.com/SingleRust/SingleRust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lapack = ["single_algebra/lapack"]
faer = ["single_algebra/faer"]

[dependencies]
anndata = "0.4.2"
anndata-hdf5 = "0.3.0"
polars = { version = "0.40", features = ["lazy", "decompress-fast", "ndarray", "dtype-full"] }
ndarray = { version = "0.15.6", features = ["rayon"]}
nalgebra-sparse = "0.9.0"
smallvec = "1.11"
permutation = "0.4"
flate2 = "1.0.28"
itertools = "0.13.0"
indicatif = "0.17.8"
console = "0.15.8"
anyhow = "1.0.86"
rayon = {version = "1.9.0"}
log = "0.4.22"
#anndata-memory = "0.1.1-alpha.1"
#anndata-memory = {git = "https://github.com/SingleRust/Anndata-Memory.git"}
anndata-memory = {path = "/local/bachelor_thesis_ian/anndata-memory"}
num-traits = "0.2.19"
statrs = "0.17.1"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
rand = "0.8.5"
plotters = "0.3.6"
smartcore = {version = "0.3.2", features = ["ndarray-bindings"]}
nshare = {version = "0.9.0", features = ["ndarray", "nalgebra"]}
nalgebra = {version = "0.33.0", features = ["serde-serialize", "rayon"]}
single_algebra = {version = "0.1.0-alpha.3"}
#ndarray-linalg = {version = "0.16.0"}

[dev-dependencies]
env_logger = "0.11.5"

